<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">eWING 2.0</string>

    <string name="login_no_account">
        I don\'t have an account. <font color="#2ECC40"><b>Register</b></font>
    </string>
    <string name="register_have_account">
        I already have an account. <font color="#2ECC40"><b>Login</b></font>
    </string>

    <string name="google_map_api_key" tools:ignore="Typos">AIzaSyBvMOr4ftJjlnIG4Kx_D6XPcx67o4Mu1G0</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="server_key" tools:ignore="Typos">AIzaSyAP5FRqOX5GLIAzzr3IY8SjcWJT6-fLbMU</string>

    <string name="eBird_api_key" tools:ignore="Typos">lm7if8fvtvip</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>

    <string-array name="sort_types">
        <item>SORT BY DATE</item>
        <item>SORT BY NAME</item>
        <item>SORT BY RARITY</item>
        <item>SORT BY NOTES</item>
        <item>SORT BY DATE</item>
    </string-array>

    <string name="add">Add</string>
    <string name="add_image">Add Image</string>
    <string name="description">Description</string>
    <string name="name_of_bird">Name of bird</string>
    <string name="add_bird_details">Add Bird Details</string>
    <string name="delete">Delete</string>
    <string name="todo">TODO</string>
    <string name="add_bird_marker">Add Bird Marker</string>
    <string name="update">Update</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="rarity">Rarity</string>
    <string name="confirmPassword">eg. 1234</string>
    <string name="email">eg. ST10091167@vcconnect.edu.za</string>
    <string name="password">eg. 1234</string>
    <string name="registerButton">Register</string>
    <string name="username">eg. Theodore</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="searchHint">e.g. South Africa</string>
    <string name="distance">e.g. 10 Km</string>
    <string name="profileEmail">e.g. Theoboy399@gmail.com</string>
    <string name="logout">Log Out</string>
    <string name="profilePassword">e.g. Theo1234</string>
    <string name="profileTitle">User\'s Profile</string>
    <string name="emailHeading">Email</string>
    <string name="passwordHeading">Password</string>
    <string name="usernameHeading">Username</string>
    <string name="profileUsername">e.g. Theodore</string>
    <string name="Hotspot_title">Birds\' Hotspots</string>
</resources>